--- a/Daily Assignment/20230711 HTML formatting tag/index.html
+++ b/Daily Assignment/20230711 HTML formatting tag/index.html
@@ -11,7 +11,7 @@
     <title>HTML day-2</title>
   </head>
   <body>
-    <img src="Mountainn.jpg"/> alt="snow capped mountains"  width="100%" />
+    <img src="Mountainn.jpg"/>
     <h2>Mountain</h2>
     <hr />
     <p> From Wikipedia, the free encyclopedia
@@ -30,18 +30,7 @@ Whether a landform is called a mountain may depend on local usage.</u> <i>John W
 In the<small> United Kingdom and the Republic of Ireland</small>, a mountain is usually defined as any summit at least 2,000 feet (610 m) high,[6] which accords with the official UK government's definition that a mountain, for the purposes of access, is a summit of 2,000 feet (610 m) or higher.[7] In addition, some definitions also include a topographical prominence requirement, such as that the mountain rises 300 metres (984 ft) above the surrounding terrain.[1] At one time the US Board on Geographic Names defined a mountain as being 1,000 feet (305 m) or taller,[8] but has abandoned the definition since the 1970s. Any similar landform lower than this height was considered a hill. However, today, the US Geological Survey concludes that these terms do not have <mark>technical definitions in the US.[9]</mark>
     </p>
 
-   <p>this is line1 this is line 2 this is line 3</p>
-    <pre><p>
-        this is a new text message.
-             this is  a line.
-                 this is a hard copy.
-          this is line 3 
-this is line 4
-</p>
-<p>this is line one
-    this is line 2
-    this  is line 3
-</p>
+  <p><b>FORMULA</b></p>
 
 <p>CH3COOH = CH <SUB>3</SUB>COOH</p>
 <P>H2O = H <SUB>2</SUB> O 
